--- a/views/templates/footer2.html
+++ b/views/templates/footer2.html
@@ -14,9 +14,7 @@
     <!-- Directives -->
     <script src="js/angular/directives/scrollglue.js"></script>
 
-    <!-- socket.io -->
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/worldchat/chat.js"></script>
+    <script src="js/tictactoe.js"></script>
 
     
 </body>
