--- a/views/users/profil_tictactoe.html
+++ b/views/users/profil_tictactoe.html
@@ -74,4 +74,4 @@
         <!-- /#page-content-wrapper -->
     </div>
     <!-- /#wrapper -->
-    {% include 'templates/footer.html' %}
+    {% include 'templates/footer2.html' %}
