--- a/views/templates/nav2.html
+++ b/views/templates/nav2.html
@@ -13,7 +13,7 @@
             </div>
         </li>
         <li>
-            <a href="/worldchat_home">
+            <a href="/tictactoe_home">
                 <i class="glyphicon glyphicon-pencil"></i> Home</a>
         </li>
         <li>
