--- a/views/tictactoe.html
+++ b/views/tictactoe.html
@@ -41,7 +41,7 @@
                         </ul>
                     </div>            <div class="container">
                     <section class="col-lg-12">
-                        <h1 class="title"> Le jeu du tic-tac-toe</h1>
+                        <h1 class="title"> Tic-tac-toe</h1>
                         <div id="Jeu">
                             <div>
                                 <button type="button" class="btn btn-secondary"></button>
@@ -70,4 +70,4 @@
     <!-- /#wrapper -->
 </div>
 
-{% include 'templates/footer.html' %}
+{% include 'templates/footer2.html' %}
