--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
                               
                                   <div class="item">
                                     <a href="/tictactoe">
-                                        <img src="https://i.imgur.com/uD48q4I.png" alt="tictactoe">
+                                        <img src="https://i.imgur.com/73JtNOZ.png" alt="tictactoe">
                                     </a>
                                 </div>
                                 </div>
