--- a/public/css/users/profil.css
+++ b/public/css/users/profil.css
@@ -1,6 +1,3 @@
-/* .profil{
-    
-} */
 
 /* TOP NAV */
 .user-row {
@@ -105,17 +102,16 @@
 
 .infoProfil {
     position: relative;
-    top: -23rem;
-    left: 65rem;
+    top: -14rem;
+    left: 51rem;
     width: 33rem;
     height: 14rem;
 }
 
 .img-profil {
     position: relative;
-    left: 28.4rem;
-    top: -2rem;
-    width: 23%;
+    left: 22rem;
+    top: 5rem;
 }
 
 .username-profil {
@@ -142,31 +138,44 @@
     width: 18rem;
 }
 
-button {
-    pointer: cursor;
-  }
+.formProfil {
+    position: relative;
+    top: 0rem;
+    left: 12rem;
+}
   
-  input[type=file] {
-    width: 500px;
-    height: 500px;
-    background: black;
-  }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 380px) {
     .img-profil {
         position: relative;
-        left: 8.4rem;
-        top: -4rem;
-        width: 50%;
+        left: -4.6rem !important;
+        top: -4rem !important;
     }
 
     .infoProfil {
         position: relative;
-        text-align: center;
+        top: 2rem !important;
+        left: -1rem !important;
+        width: 33rem !important;
+        height: 14rem !important;
+    }
+}
+
+
+@media only screen and (max-width: 960px) {
+    .img-profil {
+        position: relative;
+        left: 14rem;
+        top: -2rem;
+    }
+    
+    .infoProfil {
+        position: relative;
         top: 2rem;
-        left: 0;
+        left: 18rem;
         width: 33rem;
         height: 14rem;
     }
 }
+
 
