--- a/views/users/profil.html
+++ b/views/users/profil.html
@@ -15,25 +15,21 @@
             <canvas id="c"></canvas>
             <div class="profil" ng-controller='profil'>
 
-                
-        <form action="/getFile" enctype="multipart/form-data" method="post">
-            <!-- <input type="file" name="file-to-upload">
-            <input type="submit" value="Upload"> -->
-          </form>
                 <div class="welcome-profil">
                     <h1 class="message-profil">{{ message }}</h1>
                 </div>
-                <img class="img-profil" src="{{ image }}" alt="image">
-             
-                <div class="infoProfil">
-                    <div class="mail-profil">
-                        <label for="mail-profil">Addresse mail</label>
-                        <p id="mail-profil">{{ mail }}</p>
-                    </div>
-                    <div class="username-profil">
-                        <label for="username-profil">Pseudo</label>
-                        <p id="username-profil">{{ username }}</p>
-                    </div>
+                <div class="formProfil">
+                        <img class="img-profil" src="{{ image }}" alt="image">
+                        <div class="infoProfil">
+                            <div class="mail-profil">
+                                <label for="mail-profil">Addresse mail</label>
+                                <p id="mail-profil">{{ mail }}</p>
+                            </div>
+                            <div class="username-profil">
+                                <label for="username-profil">Pseudo</label>
+                                <p id="username-profil">{{ username }}</p>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
