--- a/views/worldChat.html
+++ b/views/worldChat.html
@@ -67,8 +67,8 @@
                                             <img src="./images/bhai.jpg" alt="">
                                         </div> -->
                                             <span class="c-black userinfo" id="{{ id_user }}">{{username}}
-                                                <span style="    margin-left: 1rem;
-                                                position: absolute; top: 1.3rem; width: 8px; height: 8px; line-height: 8px; border-radius: 50%; background-color: #80d3ab;"></span>
+                                                <span style="
+                                                position: absolute; top: 1.3rem; left: -1rem; width: 8px; height: 8px; line-height: 8px; border-radius: 50%; background-color: #80d3ab;"></span>
                                             </span>
                                         </div>
                                         <!-- <ul class="lv-actions actions list-unstyled list-inline">
